Revision history for perl distribution Convos

4.35 Not Released
 - Fix not following link when clicking on a thumbnail

4.34 2020-08-28T11:35:00+0900
 - Add support for "around" which will load messages faster
 - Improved "keep scroll position" logic with <InfinityScroll/> component
 - Improved WebSocket error messages
 - Fix loading relevant messages when clicking on a notification or search result #511
 - Fix focus logic on Shift+Enter and Esc
 - Fix max-width for YouTube iframe on small screens
 - Fix reloading Notifications
 - Fix drag&drop effect when uploading files
 - Fix reporting installed versions after "convos install" has run the first time
 - Changed default websocket error message
 - Removed loading of external Instagram JavaScript library
 - Removed loading of external Twitter JavaScript library

4.33 2020-08-08T17:32:00+0900
 - Prevent frontend from sending the whole dialog object, which results in
   WebSocket close clode "1009"

4.32 2020-08-06T19:09:00+0900
 - Fix loading login page for new users

4.31 2020-08-06T12:59:00+0900
 - Add backoff reconnect logic to the WebSocket
 - Fix issue where the WebSocket would not reconnect after being disconnected
 - Fix reloading user object on reconnect
 - Fix showing error messages in current dialog
 - Waiting for "online" and "offline" events in the browser does not seem to
   work as expected.

4.30 2020-08-05T09:29:00+0900
 - Will trim target when sending commands
   * This fixes commands like "/whois nick " with trailing spaces
 - User can resend messages when WebSocket reopens
 - Trying to fix WebSocket closing unexpectedly
 - Improved rendering of message details
 - Fix settings "secure" for client side "convos_js" cookie
 - Fix "Content-Security-Policy: unsafe-inline" header is no longer required #508
 - Fix issues with generating pretty connection names #507
 - Changed to base64 encoded email in markup to make it harder for bots
 - Changed to using "alternate stylesheet" to represent theme options