@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 4.35 Not Released
  - Fix not following link when clicking on a thumbnail
+ - Fix not focusing "search" input on load/routerender
 
 4.34 2020-08-28T11:35:00+0900
  - Add support for "around" which will load messages faster
